@@ -17,6 +17,9 @@ COM_LANGUAGES_FIELD_LANG_TAG_LABEL="Language Tag"
 COM_LANGUAGES_FIELD_PUBLISHED_DESC="Whether this content language is published or not. If published, it will display as a choice in the Language Switcher module in frontend."
 COM_LANGUAGES_FIELD_LANG_CODE_DESC="This Language Code will be appended to the site url. When SEF is enabled, one will get  http://mysite.com/en/. If SEF is disabled the suffix &amp;lang=en will be appended at the end of the URL. Note <em>the Language Code must be unique among all the languages</em>."
 COM_LANGUAGES_FIELD_LANG_CODE_LABEL="URL Language Code"
+COM_LANGUAGES_FIELD_SITE_NAME_DESC="Enter here a custom site name for this content language. If the site name is set to display, this custom site name will be used instead of the Global Configuration setting."
+COM_LANGUAGES_FIELD_SITE_NAME_LABEL="Custom Site Name"
+COM_LANGUAGES_FIELDSET_SITE_NAME_LABEL="Site Name"
 COM_LANGUAGES_FIELD_TITLE_DESC="The name of the language as it will appear in the lists"
 COM_LANGUAGES_FIELD_TITLE_NATIVE_DESC="Title in Native language"
 COM_LANGUAGES_FIELD_TITLE_NATIVE_LABEL="Title Native"
